# bookr

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: .flake8
app/app/: settings.py  urls.py
app/book/: permissions.py  serializers.py  urls.py  views.py
app/book/tests/: test_book_api.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py  0002_book.py  0003_publisher.py  0004_book_publishers.py  0005_review_book_reviews.py
app/core/tests/: test_admin.py  test_models.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
